# gtfs-tools

./: .bumpversion.cfg  Makefile  README.md  config.ini  environment.yml  make.cmd  pyproject.toml
arcgis/: gtfs-tools.aprx
arcgis/GpMessages/: 238444061677600  238918337108800  241586021354100  259718851373100  499773305214700  499820337197700  499829725414700  499900628787800  499992776500400  500028119676400  505324639794500  505453674542100  505611441732800  507885894298900  507904383333300  508037035611100  510786470270200  512196177397700  514948713202300  515055021140000  515197821748900  515398306296600  515514027476600  517506721798900  517646473974400  600899248821800
conda-recipe/: meta.yaml
docsrc/: api.rst  conf.py  gtfs.rst  index.rst  mkdocs.yml
docsrc/assets/: calendar.txt  calendar_dates_1.txt  calendar_dates_2.txt  stop_times.txt
docsrc/mkdocs/: api.md  gtfs.md  index.md
docsrc/notebooks/: 01-build-stops.ipynb  02-proximity.ipynb  Untitled.ipynb  basic-index.ipynb  distance-decay-index.ipynb  distance-decay-sigmoid.ipynb  gtfs_exploration.ipynb  gtfs_list_dirs.ipynb  gtfs_pub_schema.ipynb  line_thickness.ipynb  (+2 more)
notebooks/: 01-build-stops.ipynb  02-proximity.ipynb  Untitled.ipynb  distance-decay-index.ipynb  doc-table-to-markdown.ipynb  freq_find.ipynb  gtfs_exploration.ipynb  gtfs_pub_schema.ipynb  nighttime_headway.ipynb  notebook-template.ipynb  proxmity_workflow.ipynb  transit_index_factors.ipynb  transit_index_stops.ipynb  transit_index_temporal.ipynb
scripts/: create_temporal_windows_ex.py  make_data.py
testing/: test_gtfs_tools.py
(+12 files in other folders)
