[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtfs-tools"
version = "0.1.0.dev0"
authors = [
  { name="Joel McCune (https://github.com/knu2xs)"},
]
description = "Tools for working with GTFS datasets."
readme = "README.md"
requires-python = ">=3.6, <=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
license = {file = "LICENSE"}
dependencies = [
    "arcgis>=2.2.0",
    "numpy>=1.7",
    "pandas>=1.0.5",
    "pyarrow>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["gtfs_tools"]
